--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Poppins";
   height: 100vh;
   width: 100vw;
+  background: #171e72a1;
+  color: #fafafa;
 }
 
 a {
@@ -28,4 +31,26 @@ a {
   width: 100%;
   height: 100%;
   display: flex;
+}
+
+.wrapper {
+  scrollbar-color: #6969dd #e0e0e0;
+}
+
+.wrapper::-webkit-scrollbar {
+  border-radius: 10px;
+  width: 8px;
+  background-color: #f5f5f5;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+  background-color: #555;
+  cursor: pointer;
+}
+.wrapper::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+  border-radius: 10px;
+  background-color: #999;
 }
