--- a/styles/home.css
+++ b/styles/home.css
@@ -13,7 +13,34 @@
   padding: 100px;
   gap: 100px;
 }
+
+.home-header-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.home-header-first {
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 40px;
+}
+
+.home-header-second {
+  font-size: 92px;
+  font-weight: 800;
+  line-height: 120px;
+}
+
+.home-header-third {
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 30px;
+}
 .home-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
 }
 
 .home-content {
